--- a/src/main/resources/assets/teasofficial/lang/zh_cn.json
+++ b/src/main/resources/assets/teasofficial/lang/zh_cn.json
@@ -4,5 +4,7 @@
 
   "item.teasofficial.vajra": "金刚杵",
   "tooltip.teasofficial.vajra.1": "§6为什么格雷的东西会出现在这里？！",
-  "tooltip.teasofficial.vajra.2": "§f该工具对所有方块破坏速度均相等。"
+  "tooltip.teasofficial.vajra.2": "§f该工具对所有方块破坏速度均相等。",
+  "tooltip.teasofficial.vajra.3": "§6可以作为：§f镐、斧、锹、扳手。",
+  "tooltip.teasofficial.multitools": "§7§u这是一个多用途工具"
 }
